styles/ui-variables.less
/*
* This is sortof prepared for adjustable themes.
* Everything is based of a single color taken from the syntax theme.
*/


@import "syntax-variables";


//provide defaults, users can set configs that are handled in config.less
@font-family: 'Helvetica Neue', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
@font-size: 12px;
@font-weight: 200;



// a modular scale maintains relations across all sizes and spaces
// http://type-scale.com
@modular-scale: 1.33;

@modular-scale-xxs:  pow(@modular-scale, -3);
@modular-scale-xs:   pow(@modular-scale, -2);
@modular-scale-s:    pow(@modular-scale, -1);
@modular-scale-ms:   pow(@modular-scale, -.5); // because type becomes too small
@modular-scale-m:    1;
@modular-scale-l:    pow(@modular-scale, 1);
@modular-scale-xl:   pow(@modular-scale, 2);
@modular-scale-xxl:  pow(@modular-scale, 3);
@modular-scale-xxxl: pow(@modular-scale, 4);



// leading color
@ui-theme-color: @syntax-background-color;

// tweaks, will later be provided by settings
@theme-adjust-saturation: 0%;
@theme-adjust-contrast:   0%;

// Tend towards blue instead of red when base color is white
.ui-hue() when (hsvhue(@ui-theme-color) = 0) and (hsvsaturation(@ui-theme-color) = 0%) {
  @ui-hue: 180;
}
.ui-hue() when (hsvhue(@ui-theme-color) > 0), (hsvsaturation(@ui-theme-color) > 0%) {
  @ui-hue: hsvhue(@ui-theme-color);
}
.ui-hue();
@ui-saturation:    max(7.5% + @theme-adjust-saturation, 0%); // limit to > 0%
@ui-brightness:    24%;
@ui-contrast:      @theme-adjust-contrast * 0.12;
@ui-accent:        spin( hsl( @ui-hue, 50% + @ui-saturation, 50%), 66 );



// background
@base-bg: hsv(@ui-hue, @ui-saturation, @ui-brightness);

@level-0-bg: lighten(@base-bg, @ui-contrast + 12%);
@level-1-bg: lighten(@base-bg, @ui-contrast + 6%);
@level-2-bg:  darken(@base-bg, @ui-contrast);
@level-3-bg:  darken(@base-bg, @ui-contrast + 3%);
@level-4-bg:  darken(@base-bg, @ui-contrast + 6%);
@level-5-bg:  darken(@base-bg, @ui-contrast + 9%);

@bg-info:    hsl(208, 100%/1.33, 42%/1.33);
@bg-success: hsl(160,  70%/1.33, 42%/1.33);
@bg-warning: hsl(32,   60%/1.33, 42%/1.33);
@bg-error:   hsl(0,    70%/1.33, 42%/1.33);



// foreground
@base-fg: hsl(@ui-hue, @ui-saturation, max(30%, (@ui-brightness + @ui-contrast) * 2.4) );

@fg-subtle: fadeout(@base-fg, 18%);
@fg-faded: fade(@base-fg, 24%);
@fg-ignored:  fade(@base-fg, 48%);
@fg-highlight: hsl(@ui-hue, @ui-saturation*8, @ui-contrast*10 + 88%);
@fg-selected: hsl(@ui-hue, @ui-saturation*8, @ui-contrast*10 + 98%);

@fg-info:    hsl(219,  79%/1.33, 66%/1.33);
@fg-success: hsl(140,  44%/1.33, 62%/1.33);
@fg-warning: hsl( 36,  60%/1.33, 72%/1.33);
@fg-error:   hsl(  9, 100%/1.33, 64%/1.33);

@fg-added:    @fg-success;
@fg-renamed:  @fg-info;
@fg-modified: @fg-warning;
@fg-removed:  @fg-error;




// other required vars
// may or may not be used elsewhere in this package
// https://atom.io/docs/v0.174.0/theme-variables
// translate to vars required for other packages
@text-color: @base-fg;
@text-color-subtle: @fg-subtle;
@text-color-highlight: @fg-highlight;
@text-color-selected: @fg-selected;
@text-color-info:    @fg-info;
@text-color-success: @fg-success;
@text-color-warning: @fg-warning;
@text-color-error:   @fg-error;

@background-color-info: @bg-info;
@background-color-success: @bg-success;
@background-color-warning: @bg-warning;
@background-color-error: @bg-error;
@background-color-highlight: @ui-theme-color;
@background-color-selected: @level-2-bg;

@app-background-color:             @level-2-bg;
@base-background-color:            @app-background-color;
@base-border-color:                @level-4-bg;

@pane-item-background-color:       @level-3-bg;
@pane-item-border-color:           @level-5-bg;

@input-background-color:           @level-0-bg;
@input-border-color:               @level-5-bg;

@tool-panel-background-color:      @level-2-bg;
@tool-panel-border-color:          @level-5-bg;

@inset-panel-background-color:     @level-5-bg;
@inset-panel-border-color:         @level-5-bg;

@panel-heading-background-color:   @level-3-bg;
@panel-heading-border-color:       @level-5-bg;

@overlay-background-color:         @level-2-bg;
@overlay-border-color:             @level-5-bg;

@button-background-color:          @level-1-bg;
@button-background-color-hover:    @level-4-bg;
@button-background-color-selected: @level-1-bg;
@button-border-color:              @button-background-color;

@tab-bar-background-color:         @app-background-color;
@tab-bar-border-color:             @tab-bar-background-color;
@tab-background-color:             @level-2-bg;
@tab-background-color-active:      @ui-theme-color;
@tab-border-color:                 @tab-background-color;

@tree-view-background-color:       @level-3-bg;
@tree-view-border-color:           @level-3-bg;

@ui-site-color-1: @bg-success;             // green
@ui-site-color-2: spin(@bg-success, 60);   // blue
@ui-site-color-3: spin(@bg-success, -120); // orange
@ui-site-color-4: spin(@bg-success, -210); // pink
@ui-site-color-5: spin(@bg-success, -100); // yellow


@disclosure-arrow-size:    1rem;

@component-padding:        @modular-scale-l * 1rem;
@component-icon-padding:   @modular-scale-xs * 1rem;
@component-icon-size:      16/12 * 1rem;
@component-line-height:    @modular-scale-xxl * 1rem;
@component-border-radius:  2px;

@tab-height: @modular-scale-xxl * 1rem;

